[gd_scene load_steps=2 format=3 uid="uid://cd7vapsmxp183"]

[ext_resource type="Script" path="res://Components/Combat/InvulnerabilityOnHitComponent.gd" id="1_hku45"]

[node name="InvulnerabilityOnHitComponent" type="Node" groups=["components"]]
script = ExtResource("1_hku45")

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="onTimerTimeout"]
